--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Puppis Colombia",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.21.0",
@@ -25,6 +26,7 @@
     "express-sessions": "^1.0.6",
     "fs": "0.0.1-security",
     "http-errors": "^1.7.3",
+    "https": "^1.0.0",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
