--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.15",
     "mongoose": "^5.12.5",
     "morgan": "^1.10.0",
+    "mssql": "^9.0.1",
     "multer": "^1.4.2",
     "node-cron": "^2.0.3",
     "nodemailer": "^6.4.6",
