[CA] Updating env example

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,28 @@
 ENV=env
 PORT=port
+SERVER_HOST=host
+
+## VTEX
 ACCOUNTNAME=account
-VTEX_API_KEY=apikey
-VTEX_API_TOKEN=apitoken
-KEY_UPLOAD=token
-TOKEN_SMS=token
-OPENCAGEDATA=token
-GOOGLEMAPSAPI=token
+VTEX_API_KEY=key
+VTEX_API_TOKEN=token
+KEY_UPLOAD=key
+TOKEN_SMS=key
+OPENCAGEDATA=key
+GOOGLEMAPSAPI=key
+
+# COMERSSIA DB
+DB_COMERSSIA_NAME=name
+DB_COMERSSIA_SCHEMA=schema
+DB_COMERSSIA_USER=user
+DB_COMERSSIA_PASSWORD=pass
+DB_COMERSSIA_HOST=host
+DB_COMERSSIA_PORT=port
+
+## INSIDER
+INSIDER_UPSERT_URL=url
+INSIDER_PARTNER=partner
+INSIDER_API_KEY=key
+
+## CODIGO LOGIN SUSCRIPCIONES
+SUBSCRIPTIONS_CODE=code
